--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
     --section-color: #eff7fa;
 }
 
-
 body {
     font-family: 'Roboto', sans-serif;
     height: 5000px;
@@ -108,6 +107,53 @@ body {
     color: var(--yellow-color);
 }
 
-/*  */
+/* Our Work */
+.our_work {
+    background-color: var(--section-color);
+}
 
+.our_work ul li {
+    padding: .5rem 1rem;
+    cursor: pointer;
+}
 
+.our_work ul li:hover {
+    color: var(--red-color);
+}
+
+.our_work ul li.active {
+    background-color: var(--red-color);
+    color: #fff;
+}
+
+.our_work .box {
+    padding: 5px;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+}
+
+.our_work .box::before {
+    content: attr(data-work);
+    position: absolute;
+    background-color: rgb(51 209 204 / 75%);
+    width: calc(100% - 10px);
+    height: calc(100% - 10px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #fff;
+    transition: .3s;
+    transform: translateX(calc(-100% - 5px));
+}
+
+.our_work .box:hover::before {
+    transform: translateX(0);
+}
+
+/* Stuff */
+.stuff .description {
+    max-width: 500px;
+}
